# runwarden

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md  SUBMISSION.md  deny.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  contest-evidence.yml  full-gate.yml  release.yml
crates/runwarden-anomaly/: Cargo.toml
crates/runwarden-api/: Cargo.toml
crates/runwarden-api/src/: lib.rs
crates/runwarden-api/tests/: local_api_security.rs  local_api_server.rs
crates/runwarden-assurance/: Cargo.toml
crates/runwarden-cli/: Cargo.toml
crates/runwarden-cli/src/: console.html  lib.rs  main.rs  server.rs
crates/runwarden-cli/src/story/: legacy.rs  mod.rs
crates/runwarden-cli/src/web_server/: api.rs  mod.rs  reviewer_nonce.rs  sse.rs
crates/runwarden-cli/tests/: agent_config.rs  approval_api.rs  approval_commands.rs  artifact_commands.rs  assurance_commands.rs  authority_commands.rs  cert_bench_commands.rs  completion_contract.rs  contest_workflow.rs  e2e_release_smoke.rs  legacy_story_adapter.rs  provider_commands.rs  reviewer_csrf.rs  session_commands.rs  sse_resume.rs  story_api.rs  strict_check.rs  trace_commands.rs
crates/runwarden-cli/tests/common/: mod.rs
crates/runwarden-kernel/: Cargo.toml
crates/runwarden-kernel/examples/: generate_schemas.rs
crates/runwarden-kernel/src/: artifact.rs  authority.rs  bundle.rs  evidence.rs  kernel.rs  lib.rs  main.rs  manifest.rs  operation.rs  policy.rs  resource.rs  resource_binding.rs  session.rs  story.rs  trace.rs
crates/runwarden-kernel/src/contracts/: mod.rs  operation.rs  provider.rs
crates/runwarden-kernel/tests/: canonical_json_v1.rs  contract_schemas.rs  contract_states.rs  kernel_cli.rs  kernel_enforcement.rs  kernel_foundation.rs  manifest_session.rs  operation_transitions.rs  provider_manifest_contract.rs  resource_claims.rs  story_contract.rs  story_hash_vectors.rs  typed_resource_policy.rs
crates/runwarden-llm-proxy/: Cargo.toml
crates/runwarden-llm-proxy/src/: lib.rs  main.rs  story_events.rs
crates/runwarden-llm-proxy/tests/: proxy_flow.rs  story_events.rs
crates/runwarden-mcp/: Cargo.toml
crates/runwarden-mcp/src/: approval_wait.rs  config.rs  lib.rs  main.rs  provider_call.rs  server.rs  tools.rs
crates/runwarden-mcp/tests/: approval_resume.rs  concurrent_approval_processes.rs  disconnect_recovery.rs  durable_provider_call.rs  e2e_agent_flow.rs  jsonrpc.rs  operation_status.rs  stdio_server.rs  trace_export_contract.rs
crates/runwarden-mcp/tests/common/: mod.rs
crates/runwarden-platform/: Cargo.toml
crates/runwarden-providers/: Cargo.toml
crates/runwarden-providers/src/: external.rs  lib.rs  projection.rs
crates/runwarden-providers/src/adapters/: http.rs  mod.rs  sse.rs  stdio.rs
crates/runwarden-providers/src/demo_tools/: email.rs  file.rs  inspection.rs  mod.rs  simulated_network.rs  store.rs
crates/runwarden-providers/src/executor/: default.rs  mod.rs  monitor_only.rs
crates/runwarden-providers/src/resource_claims/: email.rs  file.rs  input.rs  mod.rs  network.rs  store.rs
crates/runwarden-providers/tests/: authoritative_resource_binding.rs  catalog.rs  evidence_inspect.rs  external_mcp_executor.rs  external_provider_contract.rs  input_inspect.rs  provider_executor.rs  provider_idempotency.rs  resource_claim_extraction.rs  runtime_isolation.rs  safe_argument_projection.rs
crates/runwarden-runtime/: Cargo.toml
crates/runwarden-runtime/src/: approval.rs  context.rs  errors.rs  lib.rs  operation.rs
crates/runwarden-runtime/tests/: approval_execution.rs  fail_closed.rs  idempotent_invoke.rs  post_effect_failure.rs  reconciliation.rs  server_owned_context.rs
crates/runwarden-runtime/tests/common/: mod.rs
crates/runwarden-state/: Cargo.toml
crates/runwarden-state/migrations/: 0001_story_journal.sql  0002_model_proposals.sql
crates/runwarden-state/src/: approvals.rs  events.rs  legacy_jsonl.rs  lib.rs  operations.rs  proposals.rs  recovery.rs  sessions.rs  snapshots.rs  store.rs  stories.rs
crates/runwarden-state/tests/: approval_contention.rs  approval_lifecycle.rs  approval_security.rs  concurrent_events.rs  crash_recovery.rs  cross_story_constraints.rs  event_ordering.rs  legacy_export.rs  migrations.rs  model_journal.rs  operation_journal.rs  proposal_links.rs  snapshot_reads.rs  state_permissions.rs  story_session.rs
crates/runwarden-state/tests/common/: mod.rs
docs/: 00-overview.md  01-agent-security-kernel.md  02-xa-202620-submission-map.md  03-evaluation-results.md  README.md  repository-review.md  security-risk-analysis-report.md
docs/concepts/: agent-tool-boundary.md
docs/contest/: README.md  artifact-index.md  demo-script.md  innovation-architecture.md  limitations.md  redteam-results.md  reproduction.md  scorecard.md
docs/development/: contest-verification.md  release-process.md
docs/guides/: manual-walkthrough.md  reviewer-console.md
docs/reference/: agent-integration.md  artifact-manifest.md  assessment-manifest.md  authority-and-session.md  ci.md  cli.md  mcp.md  (+17 more)
redteam/: README.md  run.py  test_run.py  validate_corpora.py
schemas/: approval-record.schema.json  artifact-manifest.schema.json  assessment-manifest.schema.json  authority-snapshot.schema.json  operation-result.schema.json  provider-call.schema.json  provider-contract.schema.json  provider-manifest.schema.json  provider-outcome.schema.json  report.schema.json  resource-claim.schema.json  security-operation.schema.json  security-story.schema.json  session-manifest.schema.json  story-bundle-manifest.schema.json  story-event.schema.json  story-evidence-view.schema.json  story-replay-frame.schema.json  trace-event.schema.json  trace-export-page.schema.json  trace-page.schema.json  trace-query.schema.json
scripts/: artifact_bundle_gate.sh  artifact_leak_scan.sh  check_ts_contracts.sh  contest_bundle.sh  contest_clean.sh  dev_gate.sh  generate_artifacts.sh  nightly_full_gate.sh  pr_fast_gate.sh  release_gate_local.sh  security_gate_local.sh
(+190 files in other folders)
