[package]
name = "runwarden-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
runwarden-assurance = { path = "../runwarden-assurance" }
runwarden-kernel = { path = "../runwarden-kernel" }
runwarden-providers = { path = "../runwarden-providers" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23"
