[package]
name = "runwarden-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "runwarden"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
runwarden-assurance = { path = "../runwarden-assurance" }
runwarden-api = { path = "../runwarden-api" }
runwarden-kernel = { path = "../runwarden-kernel" }
runwarden-providers = { path = "../runwarden-providers" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23"
