[package]
name = "runwarden-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "runwarden"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = "0.8"
clap.workspace = true
runwarden-assurance = { path = "../runwarden-assurance" }
runwarden-kernel = { path = "../runwarden-kernel" }
runwarden-llm-proxy = { path = "../runwarden-llm-proxy" }
runwarden-providers = { path = "../runwarden-providers" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3.23"
