[package]
name = "runwarden-kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
getrandom.workspace = true
hmac.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3.23"
