[package]
name = "runwarden-llm-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "runwarden-llm-proxy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
runwarden-kernel = { path = "../runwarden-kernel" }
runwarden-providers = { path = "../runwarden-providers" }
runwarden-state = { path = "../runwarden-state" }
serde_json.workspace = true
time.workspace = true
ureq.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"
