[package]
name = "runwarden-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "runwarden-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
runwarden-assurance = { path = "../runwarden-assurance" }
runwarden-kernel = { path = "../runwarden-kernel" }
runwarden-providers = { path = "../runwarden-providers" }
serde_json.workspace = true
