[package]
name = "runwarden-providers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
getrandom.workspace = true
hmac.workspace = true
runwarden-kernel = { path = "../runwarden-kernel" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
unicode-normalization = "0.1"
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3.23"
