[package]
name = "runwarden-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
runwarden-kernel = { path = "../runwarden-kernel" }
runwarden-providers = { path = "../runwarden-providers" }
runwarden-state = { path = "../runwarden-state" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23"
